# MANSPIDER

./: Dockerfile  LICENSE  README.md  manspider.py  manspider.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cla.yml  tests.yml
lib/: errors.py  file.py  logger.py  processpool.py  smb.py  spider.py  spiderling.py  util.py
lib/parser/: __init__.py  parser.py
man-spider/lib/: __init__.py  util.py
man_spider/: manspider.py
man_spider/lib/: __init__.py  errors.py  file.py  logger.py  processpool.py  smb.py  spider.py  spiderling.py  util.py
man_spider/lib/parser/: parser.py
manspider/: manspider.py
manspider/lib/: logger.py  spider.py  spiderling.py
testdata/: test-ascii.txt  test-utf16-bom.txt  test-utf16be.txt  test-utf16le.txt  test-utf8-bom.txt  test.doc  test.docx  test.xls  test.xlsx
tests/: test_kreuzberg.py  test_smb_integration.py
