[project]
name = "man-spider"
version = "1.1.2"
description = "Full-featured SMB spider capable of searching file content"
authors = [
    {name = "TheTechromancer"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "extractous>=0.3.0,<0.4.0",
    "impacket>=0.12.0,<0.13.0",
    "kreuzberg>=3.20.2",
    "python-magic>=0.4.27,<0.5.0",
]

[project.urls]
Repository = "https://github.com/blacklanternsecurity/MANSPIDER"
Homepage = "https://github.com/blacklanternsecurity/MANSPIDER"

[project.scripts]
manspider = "man_spider.manspider:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
