[project]
name = "man-spider"
version = "2.0.0"
description = "Full-featured SMB spider capable of searching file content"
authors = [
    {name = "TheTechromancer"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kreuzberg",
    "impacket",
    "charset-normalizer",
]

[project.urls]
Repository = "https://github.com/blacklanternsecurity/MANSPIDER"
Homepage = "https://github.com/blacklanternsecurity/MANSPIDER"

[project.scripts]
manspider = "man_spider.manspider:main"

[tool.ruff]
line-length = 119
exclude = ["kreuzberg", "uv", ".venv"]
lint.select = ["E", "F"]
lint.ignore = ["E402", "E711", "E712", "E713", "E721", "E722", "E741", "F403", "F405", "F841", "E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
